<resources>
    <string name="app_name">Social</string>
    <string name="temporarily_full_name">Anonymous</string>
    <string name="temporarily_time">1 second ago</string>
    <string name="temporarily_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="temporarily_favorite">Favorite</string>
    <string name="temporarily_like">Like</string>
    <string name="temporarily_total_favorite">Favorite %s</string>
    <string name="temporarily_total_like">Like %s</string>
    <string name="temporarily_comment">Comment</string>
    <string name="temporarily_share">Share</string>
    <string name="temporarily_what_is_on_your_mind">What\'s on your mind?</string>
    <string name="temporarily_create_post">Create post</string>
    <string name="temporarily_share_feeds_public">Public</string>
    <string name="temporarily_edit_post">Edit Post</string>
    <string name="temporarily_menu_post">Post</string>
    <string name="temporarily_menu_save">Save</string>
    <string name="temporarily_bottom_sheet_edit_post">Edit post</string>
    <string name="temporarily_acquaintances">Acquaintances</string>
    <string name="temporarily_posts">Posts</string>
    <string name="temporarily_find_acquaintances">Find Acquaintances</string>
    <string name="temporarily_total_acquaintances">%s acquaintances</string>
    <string name="temporarily_see_all_acquaintances">See All Acquaintances</string>
    <string name="temporarily_write_something_to">Write something to %s</string>
    <string name="general_search_see_results_for">See results for %s</string>
    <string name="temporarily_cover">Acquaintances</string>
    <string name="general_default_zero_count">0</string>
    <string name="temporarily_app_bar_reactions_summary">People who reacted</string>
    <string name="post_report">Report</string>
    <string name="post_cancel_report">Cancel Report</string>
    <string name="temporarily_flag_success">You have reported successfully</string>
    <string name="temporarily_unflag_success">Your report was canceled successfully</string>
    <string name="temporarily_error">Error</string>
</resources>
