<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_component_friends_feeds"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/material_light_black"
    android:padding="@dimen/material_component_dialogs_padding_between_title_and_body_text">

    <TextView
        android:id="@+id/text_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temporarily_acquaintances"
        android:textColor="@color/material_light_white"
        android:textSize="@dimen/material_typography_subheading"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_total_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temporarily_total_acquaintances"
        android:textColor="@color/material_grey_600"
        android:textSize="@dimen/material_typography_body1"
        app:layout_constraintStart_toStartOf="@id/text_friends"
        app:layout_constraintTop_toBottomOf="@id/text_friends"
        tools:ignore="PrivateResource" />

    <TextView
        android:id="@+id/text_find_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temporarily_find_acquaintances"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/material_typography_body1"
        app:layout_constraintBottom_toBottomOf="@id/text_total_friends"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_friends"
        tools:ignore="PrivateResource" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_friends"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/md_listitem_vertical_margin"
        app:layout_constraintEnd_toEndOf="@id/text_find_friends"
        app:layout_constraintStart_toStartOf="@id/text_friends"
        app:layout_constraintTop_toBottomOf="@+id/text_total_friends"
        tools:ignore="PrivateResource" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_see_all_friends"
        android:layout_width="0dp"
        android:layout_height="@dimen/material_component_button_height"
        android:layout_marginTop="@dimen/md_listitem_vertical_margin"
        android:background="@drawable/default_button_transparent"
        android:gravity="center"
        android:text="@string/temporarily_see_all_acquaintances"
        android:textColor="@color/material_light_white"
        android:textSize="@dimen/material_typography_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/text_find_friends"
        app:layout_constraintStart_toStartOf="@id/text_friends"
        app:layout_constraintTop_toBottomOf="@id/recycler_friends"
        tools:ignore="PrivateResource" />

</androidx.constraintlayout.widget.ConstraintLayout>